Fixed scroll button layout issue on mobile

--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -87,7 +87,7 @@ $hero-grid-one-tweakpoint: 650px;
     }
 
     @include media-query($breakpoint--small) {
-      grid-column: 1 / 2;
+      grid-column: 1 / 3;
       margin-top: 0;
     }
 
